# jpegexp-rs

./: .editorconfig  .gitignore  ARCHITECTURE.md  CODEC_TEST_RESULTS.md  COMPLIANCE.md  Cargo.toml  DECODER_DEBUG_ANALYSIS.md  DEVELOPMENT.md  FINAL_STATUS_SUMMARY.md  JPEGLS_REFACTOR_PLAN.md  JPEG_LS_FIX_NOTES.md  LICENSE  PHASE1_ANALYSIS_RESULTS.md  PHASE2_INVESTIGATION.md  PHASE2_STATUS.md  PROBLEMS.md  README.md  SUMMARY.md  all_tests_out.txt  build.err  build_err.out  build_error.md  build_error_2.md  cbindgen.toml  check_output.txt  check_output_2.txt  compile_error.txt  debug_output  full_tests_list.txt  temp.raw  temp_M.raw  test_output.txt  test_results.md  tests.txt  trace.md  trace_maxbp.md
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  release.yml
docs/: README.md  c-api.md  cli.md  python-api.md  rust-api.md  wasm-api.md
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
scripts/: README.md  build.ps1  check.ps1  clean.ps1  run.ps1  test.ps1
src/: coding_parameters.rs  constants.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  golomb_lut.rs  jpeg_marker_code.rs  jpeg_stream_reader.rs  jpeg_stream_writer.rs  lib.rs  regular_mode_context.rs  run_mode_context.rs  scan_decoder.rs  scan_encoder.rs  traits.rs  validate_spiff_header.rs  wasm.rs
src/jpeg1/: dct.rs  decoder.rs  encoder.rs  huffman.rs  lossless.rs  mod.rs  quantization.rs
src/jpeg2000/: bit_io.rs  bit_plane_coder.rs  decoder.rs  dwt.rs  encoder.rs  image.rs  jp2.rs  mod.rs  mq_coder.rs  packet.rs  parser.rs  quantization.rs  tag_tree.rs  writer.rs
src/jpegls/: coding_parameters.rs  decoder.rs  encoder.rs  mod.rs  regular_mode_context.rs  run_mode_context.rs  scan_decoder.rs  scan_encoder.rs  traits.rs  validate_spiff_header.rs
tests/: README.md  codec_comparison.ipynb  codec_comparison_result.ipynb  comprehensive_test.py  create_notebook.py  debug_j2k.raw  generate_jpegls_test_images.py  imagetests.ipynb  integration_standard_libs.py  j2k_debug.rs  jpeg2000_decode_report.ipynb  jpegls_charls_validation.rs  output_gray.j2k  output_jpg_to_j2k.j2k  output_rgb.j2k  output_rgb.jls  parse_nb_results.py  python_api_demo.ipynb  synthetic_image_tests.ipynb  test_existing_images.py  test_jpegls_roundtrip.py  test_rgb.raw
tests/artifacts_comprehensive/: gray_gradient_L_gradient.raw  gray_gradient_rust.j2k  gray_gradient_rust.jls  gray_gradient_std.j2k  gray_gradient_std.jls  gray_gradient_std_decoded_by_rust_j2k.raw  gray_gradient_std_decoded_by_rust_jpeg.raw  rgb_noise_RGB_noise.raw  rgb_noise_rust.j2k  rgb_noise_rust.jls  rgb_noise_std.j2k  rgb_noise_std_decoded_by_rust_j2k.raw
tests/jpegls_test_images/: README.md  constant.j2c  (+2 more)
(+10 files in other folders)
