[package]
name = "jpegexp-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Universal JPEG codec supporting JPEG, JPEG-LS, JPEG 2000, and HTJ2K"
repository = "https://github.com/rad-medica/jpegexp-rs"
keywords = ["jpeg", "jpeg-ls", "jpeg2000", "htj2k", "image"]
categories = ["multimedia::images", "encoding"]

[[bin]]
name = "jpegexp"
path = "src/bin/jpegexp.rs"

[lib]
name = "jpegexp_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
num_enum = "0.7.5"
thiserror = "2.0.17"
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
default = []
wasm = []
ffi = []

[profile.dev]
# Optimized debug profile - faster builds with debug info
opt-level = 0
debug = true
# split-debuginfo = "packed"  # Windows: use "unpacked" or omit (packed is macOS-specific)

[profile.dev.package."*"]
# Optimize dependencies in dev mode for faster iteration
opt-level = 3

[profile.test]
# Test profile - slightly optimized for faster test execution
opt-level = 1
debug = true
